update eliza version rewrite api
