# src/api/swagger.js
@@ -3,13 +3,27 @@ import swaggerAutogen from "swagger-autogen";
 const swaggerAutogenInstance = swaggerAutogen({ openapi: "3.0.0" });
 
 const outputFile = "./swagger_output.json";
-const endpointsFiles = ["./index.js"]; // Add paths to your route files if separate
+const endpointsFiles = ["./routes.ts", "./controllers/*.ts"];
 
 const doc = {
   info: {
     title: "AI Agent API",
     description: "ForU AI Agent API Documentation",
   },
+  components: {
+    securitySchemes: {
+      ApiKeyAuth: {
+        type: "apiKey",
+        in: "header",
+        name: "x-api-key",
+      },
+    },
+  },
+  security: [
+    {
+      ApiKeyAuth: [],
+    },
+  ],
 };
 
 swaggerAutogenInstance(outputFile, endpointsFiles, doc);
